--- a/Learn_WPF_MVVM_XAML_C#_and_the_MVVM_pattern/BikeShop/BikeShop/Menu.xaml
+++ b/Learn_WPF_MVVM_XAML_C#_and_the_MVVM_pattern/BikeShop/BikeShop/Menu.xaml
@@ -6,10 +6,30 @@
       xmlns:local="clr-namespace:BikeShop"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Menu">
+      Title="Menu"
+      Background="{StaticResource background}">
+    <Page.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <Ellipse Fill="#AA000000"
+                                     Margin="10, 10, 0, 0" />
+                            <Ellipse Fill="{TemplateBinding Background}"
+                                     Margin="0, 0, 10, 10" />
+                            <Viewbox Margin="5, 5, 15, 15">
+                                <ContentPresenter />
+                            </Viewbox>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Page.Resources>
 
     <Grid>
-        <Button Content="Products" HorizontalAlignment="Left" Margin="138,180,0,0" VerticalAlignment="Top" Height="81" Width="93"/>
+        <Button Click="RedirectProducts" Content="Products" HorizontalAlignment="Left" Margin="138,180,0,0" VerticalAlignment="Top" Height="81" Width="93"/>
         <Button Click="RedirectChatSupport" Content="Chat support" HorizontalAlignment="Left" Margin="252,180,0,0" VerticalAlignment="Top" Height="81" Width="93"/>
         <Button Click="RedirectEmailSupport" Content="Email support" HorizontalAlignment="Left" Margin="368,180,0,0" VerticalAlignment="Top" Height="81" Width="94"/>
         <TextBlock HorizontalAlignment="Left" Margin="184,311,0,0" TextWrapping="Wrap" Text="Adventure Works" VerticalAlignment="Top" FontSize="24" FontWeight="Bold"/>
