--- a/DA204E-Assignment7/DA204E-Assignment7/Views/ScaleView.xaml
+++ b/DA204E-Assignment7/DA204E-Assignment7/Views/ScaleView.xaml
@@ -10,8 +10,42 @@
       Title="ScaleView"
       d:DataContext="{d:DesignInstance vm:ScaleViewModel}">
 
-    <Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="224,147,0,0" TextWrapping="Wrap" Text="Scale" VerticalAlignment="Top"/>
-
+    <Grid Margin="150 40">
+        <StackPanel Orientation="Horizontal">
+            <StackPanel>
+                <TextBlock Text="Scale" />
+                <ComboBox
+                    SelectedItem="{Binding SelectedScale, Mode=TwoWay}"
+                    ItemsSource="{Binding Scales}"
+                    Width="120">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}" />
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <TextBlock Margin="0 10 0 0" Text="Value" />
+                <TextBox Text="{Binding Value, UpdateSourceTrigger=PropertyChanged}" />
+            </StackPanel>
+            <Border CornerRadius="12" Background="#f9a8d4" Width="210" Margin="120 0 0 0">
+                <StackPanel Margin="20">
+                    <TextBlock FontWeight="SemiBold" Text="Converted Values" />
+                    <TextBlock FontWeight="SemiBold" Text="H0" />
+                    <TextBox Text="{Binding H0Value}" IsReadOnly="True" />
+                    <TextBlock FontWeight="SemiBold" Margin="0 10 0 0" Text="N" />
+                    <TextBox Text="{Binding NValue}" IsReadOnly="True" />
+                    <TextBlock FontWeight="SemiBold" Margin="0 10 0 0" Text="Z" />
+                    <TextBox Text="{Binding ZValue}" IsReadOnly="True" />
+                    <TextBlock FontWeight="SemiBold" Margin="0 10 0 0" Text="0" />
+                    <TextBox Text="{Binding ZeroValue}" IsReadOnly="True" />
+                    <TextBlock FontWeight="SemiBold" Margin="0 10 0 0" Text="1" />
+                    <TextBox Text="{Binding OneValue}" IsReadOnly="True" />
+                    <TextBlock FontWeight="SemiBold" Margin="0 10 0 0" Text="G" />
+                    <TextBox Text="{Binding GValue}" IsReadOnly="True" />
+                    <TextBlock FontWeight="SemiBold" Margin="0 10 0 0" Text="00" />
+                    <TextBox Text="{Binding ZeroZeroValue}" IsReadOnly="True" />
+                </StackPanel>
+            </Border>
+        </StackPanel>
     </Grid>
 </Page>
